--- a/CONICS.cfg
+++ b/CONICS.cfg
@@ -1,4 +1,3 @@
-
 path_to_python="python"
 path_to_samtools="samtools"
 path_to_bedtools="bedtools"
@@ -6,4 +5,4 @@ path_to_rscript="Rscript"
 mappingCutoff=40
 readCutoff=50000
 fdrCutoff=0.05
-
+genome="/path/to/genome.fa"
