--- a/CONICS.cfg
+++ b/CONICS.cfg
@@ -2,6 +2,7 @@ path_to_python="python"
 path_to_samtools="samtools"
 path_to_bedtools="bedtools"
 path_to_rscript="Rscript"
+path_to_bamreadcount="bam-readcount"
 mappingCutoff=40
 readCutoff=50000
 fdrCutoff=0.05
