Added visualization of breakpoints

--- a/CONICSmat/NAMESPACE
+++ b/CONICSmat/NAMESPACE
@@ -4,14 +4,17 @@ export(binarizeCalls)
 export(binarizeMatrix)
 export(calcNormFactors)
 export(calculateTsne)
+export(detectBreakPoints)
 export(detectVarGenes)
 export(filterMatrix)
 export(getGenePositions)
 export(loadPublicData)
 export(normMat)
 export(plotAll)
+export(plotAllChromosomes)
 export(plotBinaryMat)
 export(plotChrEnichment)
 export(plotHistogram)
 export(plotTsneGene)
 export(plotTsneProbabilities)
+export(removeLogScale)
