Added p-value calculation

--- a/CONICSmat/NAMESPACE
+++ b/CONICSmat/NAMESPACE
@@ -4,10 +4,12 @@ S3method(BIC,mix)
 export(binarizeCalls)
 export(binarizeMatrix)
 export(calcNormFactors)
+export(calcPvalue)
 export(calculateTsne)
 export(detectBreakPoints)
 export(detectVarGenes)
 export(filterMatrix)
+export(generatePvalMat)
 export(getGenePositions)
 export(likelihoodRatioTest)
 export(loadPublicData)
