--- a/CONICSmat/NAMESPACE
+++ b/CONICSmat/NAMESPACE
@@ -18,6 +18,7 @@ export(plotAll)
 export(plotAllChromosomes)
 export(plotBinaryMat)
 export(plotChrEnichment)
+export(plotChromosomeHeatmap)
 export(plotHistogram)
 export(plotTsneGene)
 export(plotTsneProbabilities)
